Add openssl to the test reqs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
     - "pypy"
 
 install:
+    - pip install pyopenssl
     - pip install -r cyclone/tests/test_requirements.txt
     - pip install coveralls
 
